apps/lidarr/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  serviceName: lidarr
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/lidarr/config"
            server: 10.10.20.10
        - name: persistent-data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/plex/data"
            server: 10.10.20.10
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls43@sha256:67887807b13ae025c0fe979da298347c8609969087ab064c81d8e9acc1e06bbf
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            httpGet:
              port: 8686
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8686
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 8686
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: false
