apps/lidarr/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: web
      protocol: TCP
      port: 8686
      targetPort: 8686
